Revert "Merged PR 945: Search icon overlapping issue fixed
1. Search icon overlapping issue fixed.
2. 1440px screen size issues fixed for => header and footer, carousel fixes for all screens.

Related work items: #1797"

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1782,10 +1782,7 @@ Mobiles Menu
     fill: #fff;
   }
   .brand-logo {
-    padding-left: 72px;
-  }
-  .isStickyActive .brand-logo {
-    padding-left: 24px;
+    padding-left: 16px;
   }
   .signup-form {
     width: 27%;
@@ -2564,7 +2561,4 @@ li.indicator.active {
 
 .where-to-buy-container {
   max-width: 100%;
-}
-@media (max-width: 1440px) {
-  .container {max-width: 1440px;} 
 }
